# opendlv-device-camera-opencv

./: .multi-arch.sh  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile.aarch64  Dockerfile.amd64  Dockerfile.armhf  Dockerfile.ubuntu1604  FindLibswscale.cmake  FindLibyuv.cmake  README.md
example/: CMakeLists.txt  Dockerfile.amd64
example/src/: cluon-complete-v0.0.76.hpp  example.cpp  opendlv-standard-message-set-v0.9.5.odvd
src/: cluon-complete-v0.0.74.hpp  jpgd.cpp  jpgd.hpp  opendlv-device-camera-opencv.cpp  opendlv-device-camera-v4l.cpp
